--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,7 +33,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest --cov-report=xml --cov=gtfs_stat
+        pytest --cov-report=xml --cov=gtfs_stat --cov=gtfs_extractor
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
