--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 /venv/
 /.idea/
 /__pycache__/
-gtfs_extractor/__pycache__/
-gtfs_stat/__pycache__/
+src/gtfs_extractor/__pycache__/
+src/gtfs_stat/__pycache__/
 .coverage
 /htmlcov/
+/src/__pycache__/
+tests/__pycache__/
