--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -45,9 +45,11 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Setup Stride-DB package
       run: |
-
+        cd open-bus-stride-db
+        python -m pip install -e .
     - name: Test with pytest
       run: |
+        cd main
         pytest --cov-report=xml --cov=src
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
