--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f main/requirements.txt ]; then pip install -r main/requirements.txt; fi
         pip install -r  open-bus-stride-db/requirements.txt
     - name: Lint with flake8
       run: |
