--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-pytest
-pytest-cov
 partridge==0.11.0
-tqdm
-gtfs_kit
-pandas
-jsonschema
-pydantic
-pytz
-sqlalchemy
-click
+tqdm==4.62.1
+gtfs_kit==5.1.4
+pandas==1.3.1
+jsonschema==3.2.0
+pydantic==1.8.2
+pytz==2021.1
+click==7.1.2
