--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,5 @@ jsonschema==3.2.0
 pydantic==1.8.2
 pytz==2021.1
 click==7.1.2
-
-setuptools~=56.0.0
-numpy~=1.21.1
-SQLAlchemy~=1.4.22
-alembic~=1.6.0
+setuptools==56.0.0
+numpy==1.21.2
