dag: add date kwarg to download

--- a/open_bus_gtfs_etl/dags.yaml
+++ b/open_bus_gtfs_etl/dags.yaml
@@ -8,6 +8,8 @@
         type: cli
         module: open_bus_gtfs_etl.cli
         function: download
+        kwargs:
+          date: {}
     - id: analyze
       depends_on:
         - download
