stop_times.load_to_db: add cache of ride and stop objects fetching

--- a/open_bus_gtfs_etl/dags.yaml
+++ b/open_bus_gtfs_etl/dags.yaml
@@ -38,6 +38,7 @@
         kwargs:
           date: {}
           limit: {}
+          no_count: {}
     - id: cleanup-dated-paths
       depends_on:
         - analyze
