add retry mechanizm and test it

--- a/open_bus_gtfs_etl/gtfs_extractor/gtfs_extractor.config
+++ b/open_bus_gtfs_etl/gtfs_extractor/gtfs_extractor.config
@@ -14,5 +14,6 @@
   "trip_id_to_date_file": {
     "url": "ftp://gtfs.mot.gov.il/TripIdToDate.zip",
     "local_name": "TripIdToDate.zip"
-  }
+  },
+  "download_retries_delay": [30, 60, 120]
 }
