add more retries for download step

--- a/open_bus_gtfs_etl/gtfs_extractor/gtfs_extractor.config
+++ b/open_bus_gtfs_etl/gtfs_extractor/gtfs_extractor.config
@@ -15,5 +15,5 @@
     "url": "ftp://gtfs.mot.gov.il/TripIdToDate.zip",
     "local_name": "TripIdToDate.zip"
   },
-  "download_retries_delay": [30, 60, 120]
+  "download_retries_delay": [30, 60, 120, 240, 240, 240, 240, 240, 240, 240, 240, 240, 240]
 }
