--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
-/venv/
-/.idea/
-/__pycache__/
-open_bus_gtfs_etl/gtfs_extractor/__pycache__/
-open_bus_gtfs_etl/gtfs_stat/__pycache__/
+venv
+.idea
 .coverage
-/htmlcov/
-/open_bus_gtfs_etl/__pycache__/
-tests/__pycache__/
-/.pylintrc
-/*.egg-info
+htmlcov
+.pylintrc
+*.egg-info
 .env
 /tests/resources/example_archive_folder/stat_archive
 .data
