--- a/open_bus_gtfs_etl/dags.yaml
+++ b/open_bus_gtfs_etl/dags.yaml
@@ -10,6 +10,7 @@
         function: download
         kwargs:
           date: {}
+          force_download: {}
     - id: extract
       depends_on:
         - download
