--- a/open_bus_gtfs_etl/dags.yaml
+++ b/open_bus_gtfs_etl/dags.yaml
@@ -83,3 +83,18 @@
         function: cleanup_workdir
         kwargs:
           date: {}
+
+
+- name: gtfs-etl-upload-to-s3
+  description: |
+    Manual trigger for uploading GTFS data to S3
+  tasks:
+    - id: upload_to_s3
+      config:
+        type: cli
+        module: open_bus_gtfs_etl.cli
+        function: upload_to_s3
+        kwargs:
+          date: {}
+          force: {}
+          upload_all: {}
