--- a/open_bus_gtfs_etl/dags.yaml
+++ b/open_bus_gtfs_etl/dags.yaml
@@ -84,7 +84,6 @@
         kwargs:
           date: {}
 
-
 - name: gtfs-etl-upload-to-s3
   description: |
     Manual trigger for uploading GTFS data to S3
@@ -98,3 +97,17 @@
           date: {}
           force: {}
           upload_all: {}
+
+- name: gtfs-etl-load-missing-data
+  description: |
+    Manual trigger for loading missing data to the DB
+    {"from_date": "2022-03-19", "to_date": "2022-03-15"}
+  tasks:
+    - id: load_missing_data
+      config:
+        type: cli
+        module: open_bus_gtfs_etl.load_missing_data
+        function: main
+        kwargs:
+          from_date: {}
+          to_date: {}
